2003-09-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/bug-lilypond-cygwin.sh: Fix fallbacks for new docdir and
	build versions.

2003-09-15  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/lexer.ll: Macos X line ending bugfix, backport. 

2003-09-14  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/new-markup.scm (musicglyph-markup): undefine font-name.

2003-09-09  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Release 1.8.2.

	* GNUmakefile.in (EXTRA_DIST_FILES): dist lilypond.vim too.

	* scm/chord-ignatzek-names.scm: backport 1.9 fix for base notes. 

	* lily/glissando-engraver.cc (stop_translation_timestep): backport
	of glissando bugfix.

2003-09-05  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/tutorial.itely (More about pitches and
	accidentals): typo.

2003-08-30  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/refman.itely (Fingering instructions): 

	* lily/new-fingering-engraver.cc (position_scripts): don't crash
	for borderline cases. 

2003-08-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/bug-lilypond-cygwin.sh: Run latex on lily output (WAS: tex).

	* stepmake/stepmake/generic-vars.make: Check for i686-cygwin arch
	too.

2003-08-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/lilypond-book.py (compose_full_body): Do not emit
	\renameinput.

2003-08-26  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* python/lilylib.py (command_name): robustification

	* scripts/lilypond-book.py: idem.

	* scripts/ly2dvi.py: backport latex redirect fix.

	* Documentation/bibliography/engraving.bib (year): typos.

2003-08-25  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/lilypond-book.itely (Invoking lilypond-book):
	add note about -Ppdf

2003-08-23  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/slur.cc (get_attachment): bugfix: don't crash on non-cons
	attachment property.

	* Documentation/user/refman.itely: url fixes.

	* po/sv.po: new po

2003-08-21  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
